[package]
name = "spike-rust"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.31", features = ["recovery"] }
crypto-hashes = "0.10.0"
revm.workspace = true

